<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">罚单系统</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="password_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="account">请填写帐号</string>
    <string name="password">请输入密码</string>
    <string name="login">登   录</string>
    <string name="forgetorregister">忘记密码或注册用户</string>
    <string name="rem_pass">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="title_activity_forget_and_register">ForgetAndRegister</string>
    <string name="title_activity_forget_password">ForgetPassword</string>
    <string name="title_activity_regiser">Register</string>
    <string name="register">注  册</string>
    <string name="input_password">输入密码</string>
    <string name="input_password_ag">再次输入密码</string>
    <string name="sex">性别：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="security_question">密 保:</string>
    <string name="answer">密保问题答案</string>
    <string name="car_account">请输入车牌号</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="title_activity_view_pager">ViewPager</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="title_activity_person">PersonActivity</string>
    <string name="ticket_type">罚单类型</string>
    <string name="ticket_time">罚单时间</string>
    <string name="gps">定位</string>
    <string name="car_num">车牌号</string>
    <string name="upload">上  传</string>
    <string name="title_activity_forget_passwor">ForgetPasswor</string>
    <string name="title_activity_view1">View1</string>
    <string name="title_activity_view2">View2</string>
    <string name="title_activity_view3">View3</string>
    <string name="title_activity_ticket_detail">TicketDetail</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>

</resources>
