<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C1CDCD"
    android:orientation="vertical"
    tools:context=".Register" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="10dip"
        android:text="@string/register"
        android:textColor="#969696"
        android:textSize="30sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="3.0px"
        android:layout_marginLeft="14dip"
        android:layout_marginRight="14dip"
        android:background="@drawable/shape_line" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="15.0dip"
        android:background="@drawable/shape_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/re_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:background="#ffffff"
                android:hint="@string/account"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/re_password"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:background="#FFFFFF"
                android:digits="@string/password_digits"
                android:hint="@string/input_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/re_password_ag"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:background="#FFFFFF"
                android:digits="@string/password_digits"
                android:hint="@string/input_password_ag"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/car_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:background="#ffffff"
                android:hint="@string/car_account"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="17dip"
                android:text="@string/sex"
                android:gravity="center_vertical"
                android:textColor="#858585"
                android:textSize="19sp"/>

            <RadioGroup
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/male" 
                    android:textColor="#858585">
                </RadioButton>

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dip"
                    android:text="@string/female"
                    android:textColor="#858585" >
                </RadioButton>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="15.0dip"
        android:background="@drawable/shape_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="17dip"
                android:text="@string/security_question"
                android:gravity="center_vertical"
                android:textColor="#858585"
                android:textSize="19sp"/>

            <Spinner
                android:id="@+id/security_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:layout_marginLeft="5dip"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

             <EditText
                android:id="@+id/answer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:background="#ffffff"
                android:hint="@string/answer"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:singleLine="true" />
        </LinearLayout>
        
    </LinearLayout>
    
      <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:id="@+id/register_ok"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="19dip"
                android:layout_marginRight="19dip"
                android:layout_marginTop="15dip"
                android:background="#958B8386"
                android:text="@string/register"
                android:textSize="20sp" />
        </RelativeLayout>

</LinearLayout>