<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_marginTop="15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
            
        <TextView
	        android:id="@+id/textView1"
	        android:layout_width="90dp"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="15dp"
	        android:layout_marginTop="24dp"
	        android:textSize="20sp"
	        android:text="@string/ticket_type"
	        android:textColor="#000000" />
	        
	    <Spinner
	        android:id="@+id/type"
	        android:layout_toRightOf="@+id/textView1"
	        android:layout_width="200dp"
	        android:layout_height="35dp"
	        android:background="@drawable/frame01"
	        android:layout_marginTop="20dp" />
        
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/ticket_time"
            android:textSize="20sp" 
            android:textColor="#000000" />

        <EditText
            android:id="@+id/time"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_toRightOf="@+id/textView2"
            android:inputType="text"
            android:background="@drawable/frame02"
            android:ems="10" >
        </EditText>
            
    </RelativeLayout>
            
	<RelativeLayout
	    android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
	    <Button
            android:id="@+id/positing"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:onClick="positingListener"
            android:text="@string/gps"
            android:textSize="20sp"
            android:background="@drawable/button_up" />

         <EditText
            android:id="@+id/address"
            android:layout_toRightOf="@id/positing"
            android:layout_centerVertical="true"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:inputType="text"
            android:background="@drawable/frame02" />
	    
	</RelativeLayout>
        
	<RelativeLayout
	    android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
         
	    <Button
            android:id="@+id/bt_platenumber"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:background="@drawable/button_up"
            android:text="@string/car_num" 
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_platenumber_"
            android:layout_toRightOf="@id/bt_platenumber"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:inputType="text"
            android:background="@drawable/frame02"
            android:hint="标准格式：川A88888"
            android:ems="10" >
        </EditText>
	    
	</RelativeLayout>

	<Button
	    android:id="@+id/bt_upload"
	    android:layout_width="235dp"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="40dp"
	    android:layout_marginRight="40dp"
	    android:layout_marginTop="40dp"
	    android:background="@drawable/upbutton_up"
	    android:text="@string/upload" 
	    android:textSize="20sp"/>
        
</LinearLayout>